2007-11-08  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java,
        src/de/latlon/deejump/plugin/wfs/WFSPlugIn.java,
        src/de/latlon/deejump/plugin/wfs/UpdateWFSLayerPlugIn.java:
        Improved the API to be more usable outside of the plugin.

2007-10-30  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java:
        Fixed bug when setting default geometry.

2007-10-30  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/ui/DeeJUMPException.java,
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java:
        Improved Exception handling.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/plugin/wfs/WFSPlugIn.java,
        src/de/latlon/deejump/plugin/wfs/AbstractWFSWrapper.java:
        Fixed feature type extraction.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/TransactionFactory.java,
        src/de/latlon/deejump/plugin/wfs/WFSPlugIn.java:
        Added usage of fake geometries when requesting feature types without geometries.
        This enables editing of such feature types by adding a fake geometry
        which will be discarded when updating the feature type.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,
        src/de/latlon/deejump/plugin/wfs/AbstractWFSWrapper.java:
		Showing only the correct geometry properties.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
		src/de/latlon/deejump/plugin/wfs/WFSPanel.java:
		Sending srsName attribute with Queries - bug fix for the first selected feature type.

2007-10-26  Andreas Schmitz <schmitz@lat-lon.de>
        src/de/latlon/deejump/util/data/JUMPFeatureFactory.java,